fix parsers